[package]
name = "task-runner-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
turborepo-ui = { git = "https://github.com/vercel/turborepo.git", branch = "main" }
turbopath = { git = "https://github.com/vercel/turborepo.git", branch = "main" }
rust-ini = "0.21.3"
